Corrected icon spacing

--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ hr {
 
   .Icon-outside i {
     margin-left: 2.5em;
+    top: .3em;
     padding: .3em;
     color: rgba(255, 26, 26, 1);
   }
